-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 18, 19, 20
-
Component/s: client-libs
-
b15
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8302682 | 17.0.8-oracle | Dmitry Markov | P4 | Resolved | Fixed | b01 |
| JDK-8294835 | 17.0.6 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8302739 | 11.0.20-oracle | Dmitry Markov | P4 | Resolved | Fixed | b01 |
| JDK-8296539 | 11.0.18 | Matthias Baesken | P4 | Resolved | Fixed | b02 |
states about MultiByteToWideChar : "The function returns 0 if it does not succeed" and lists a few failure cases.
However we miss checking the failure cases in Java_sun_awt_shell_Win32ShellFolder2_getLinkLocation , seems we assume the function always works nicely (in most of the JDK coding the return value is checked ).
- backported by
-
JDK-8294835 Java_sun_awt_shell_Win32ShellFolder2_getLinkLocation check MultiByteToWideChar return value for failures
-
- Resolved
-
-
JDK-8296539 Java_sun_awt_shell_Win32ShellFolder2_getLinkLocation check MultiByteToWideChar return value for failures
-
- Resolved
-
-
JDK-8302682 Java_sun_awt_shell_Win32ShellFolder2_getLinkLocation check MultiByteToWideChar return value for failures
-
- Resolved
-
-
JDK-8302739 Java_sun_awt_shell_Win32ShellFolder2_getLinkLocation check MultiByteToWideChar return value for failures
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/c09c4337
-
Commit
openjdk/jdk17u-dev/2d4fec4d
-
Commit
openjdk/jdk/699c4296
-
Review
openjdk/jdk11u-dev/1501
-
Review
openjdk/jdk17u-dev/751
-
Review
openjdk/jdk/10015