8292866: Java_sun_awt_shell_Win32ShellFolder2_getLinkLocation check MultiByteToWideChar return value for failures

Backport-of: 699c42962eeaa6aa950ad86c2dd1f77316a1da3e